# rpkl

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  vscode-publish.yml
crates/rpkl/: CHANGELOG.md  Cargo.toml  README.md
crates/rpkl-lsp/: CHANGELOG.md  Cargo.toml
crates/rpkl-lsp/src/: backend.rs  document.rs  main.rs  semantic_tokens.rs  symbols.rs
crates/rpkl-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/rpkl-parser/src/: ast.rs  error.rs  grammar.pest  lib.rs  parser.rs
crates/rpkl-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/rpkl-runtime/src/: error.rs  evaluator.rs  lib.rs  loader.rs  object.rs  scope.rs  value.rs
crates/rpkl-runtime/tests/: snapshot_tests.rs
crates/rpkl-runtime/tests/fixtures/: aliased.pkl  config.pkl  utils.pkl
crates/rpkl-runtime/tests/fixtures/amends_scope/: base_with_ref.pkl  base_with_typed_null.pkl  child_with_ref.pkl  child_with_typed_null.pkl  use_imported_class.pkl  utils_module.pkl
crates/rpkl-runtime/tests/fixtures/inheritance/: base_config.pkl  dev_config.pkl  prod_config.pkl  server_config.pkl  staging_config.pkl
crates/rpkl-runtime/tests/fixtures/listing_method/: input.pkl  output.yaml
crates/rpkl-runtime/tests/fixtures/upstream_tests/: classes_inheritance.pkl  generators_comprehensive.pkl  list_methods.pkl  numeric_methods.pkl  realworld_config.pkl  string_methods.pkl  type_operators.pkl  when_generator.pkl
crates/rpkl-runtime/tests/snapshots/: snapshot_tests__abstract_class.snap  snapshot_tests__amends_basic.snap  snapshot_tests__amends_chain.snap  snapshot_tests__amends_inherited_property_refs_child_values.snap  snapshot_tests__amends_nested_objects.snap  snapshot_tests__amends_typed_null_property.snap  snapshot_tests__annotation_on_class.snap  snapshot_tests__arithmetic.snap  snapshot_tests__as_compatible_types.snap  snapshot_tests__as_constraint_failure.snap  snapshot_tests__as_constraint_success.snap  snapshot_tests__as_nullable.snap  snapshot_tests__as_numeric_coercion.snap  snapshot_tests__as_parameterized_list.snap  snapshot_tests__as_parameterized_list_failure.snap  snapshot_tests__as_type_error.snap  snapshot_tests__backtick_identifier.snap  snapshot_tests__binary_literals.snap  snapshot_tests__boolean_implies.snap  snapshot_tests__boolean_xor.snap  snapshot_tests__chained_method_calls.snap  snapshot_tests__class_basic.snap  snapshot_tests__class_computed_properties.snap  snapshot_tests__class_defaults_and_overrides.snap  snapshot_tests__class_function_with_params.snap  snapshot_tests__class_inheritance.snap  snapshot_tests__class_inheritance_chain.snap  snapshot_tests__class_method_accesses_module_imports.snap  snapshot_tests__class_method_override.snap  snapshot_tests__class_methods.snap  snapshot_tests__class_override_property.snap  snapshot_tests__class_with_collections.snap  snapshot_tests__compare_to.snap  snapshot_tests__comparisons.snap  snapshot_tests__complex_string_interpolation.snap  snapshot_tests__computed_properties.snap  snapshot_tests__conditionals.snap  snapshot_tests__config_example.snap  snapshot_tests__data_size.snap  snapshot_tests__datasize_arithmetic.snap  (+500 more)
crates/rpkl-stdlib/: CHANGELOG.md  Cargo.toml  README.md
crates/rpkl-stdlib/src/: base.rs  collections.rs  lib.rs  math.rs  string.rs
crates/rpkl/src/: main.rs
editors/vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json  test.pkl  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: runTests.ts
editors/vscode/src/test/suite/: extension.test.ts  index.ts
editors/vscode/syntaxes/: pkl.tmLanguage.json
editors/vscode/test-fixtures/: sample.pkl
