[workspace]
resolver = "2"
members = [
    "crates/rpkl-parser",
    "crates/rpkl-runtime",
    "crates/rpkl-stdlib",
    "crates/rpkl",
    "crates/rpkl-lsp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/prefix-dev/rpkl"

[workspace.dependencies]
# Parser dependencies
pest = "2.7"
pest_derive = "2.7"

# Runtime dependencies
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Package support
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2.2"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
insta = { version = "1.34", features = ["yaml"] }

# Internal crates
rpkl-parser = { path = "crates/rpkl-parser" }
rpkl-runtime = { path = "crates/rpkl-runtime" }
rpkl-stdlib = { path = "crates/rpkl-stdlib" }
rpkl-lsp = { path = "crates/rpkl-lsp" }
