[package]
name = "rpkl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for the PKL configuration language"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
