[package]
name = "rpkl-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard library implementations for PKL"

[dependencies]
rpkl-parser = { workspace = true }
rpkl-runtime = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
