[package]
name = "rpkl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the PKL configuration language"
publish = false

[[bin]]
name = "rpkl"
path = "src/main.rs"

[dependencies]
rpkl-parser = { workspace = true }
rpkl-runtime = { workspace = true }
rpkl-stdlib = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
